Replace getFirst() with get(0) as jdk17 can't support this usage